# LabCrew

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: labcrew.md
docs/: BUILD_PLAN.md  CONTEXT.md
labcrew/: __init__.py  config.py  env.py  main.py  mcp_server.py  runtime.py  tui.py
labcrew/agents/: __init__.py  base.py  coordinator.py  easter_egg.py  knowledge_card.py  literature_manager.py  notion_sync.py  paper_ingest.py  paper_reader.py  presentation.py  proposal.py  writing.py
labcrew/evals/: __init__.py  card_quality_eval.py  paper_summary_eval.py  routing_eval.py
labcrew/memory/: __init__.py  index.py  store.py  sync.py
labcrew/prompts/: paper_card_report.md  paper_chunk_reader.md  paper_report_synthesizer.md
labcrew/schemas/: __init__.py  artifact.py  experiment.py  note.py  paper.py  presentation.py  reading.py  reading_plan.py  task.py
labcrew/tools/: __init__.py  card_store.py  citation.py  document_adapter.py  github_adapter.py  html_slide_adapter.py  journal_store.py  llm_adapter.py  notion_adapter.py  pdf_parser.py  ppt_adapter.py  search_adapter.py  text_chunker.py  zotero_adapter.py  zotero_link_store.py
labcrew/workflows/: __init__.py  academic_slides.py  create_literature_card.py  deep_read_method.py  design_experiment.py  generate_idea.py  make_html_slides.py  make_presentation.py  plan_collection_reading.py  (+5 more)
tests/: test_card_store.py  test_html_slide_adapter.py  test_notion_adapter.py  test_notion_sync_agent.py  test_runtime.py  test_workflows.py  test_zotero_adapter.py  test_zotero_link_store.py
(+1 files in other folders)
