[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["labcrew*"]

[project]
name = "labcrew"
version = "0.1.0"
description = "A multi-agent research assistant for graduate research workflows."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "questionary>=2.0",
    "rich>=13.0",
]

[project.scripts]
labcrew = "labcrew.main:main"
labcrew-mcp = "labcrew.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
